# dating-app-fe

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
components/: activity-sidebar.tsx  activity-tab.tsx  auth-screen.tsx  chat-thread.tsx  chats-tab.tsx  comprehensive-profile-form.tsx  discover-tab.tsx  edit-profile-modal.tsx  landing-screen.tsx  loading-skeleton.tsx  main-app.tsx  match-overlay.tsx  matching-test-demo.tsx  onboarding-flow.tsx  photo-manager-modal.tsx  profile-creation-status.tsx  profile-tab.tsx  simple-profile-form.tsx  swipe-card.tsx  theme-provider.tsx  transaction-toast.tsx  wallet-connect-button.tsx  wallet-info-card.tsx  wallet-provider.tsx
components/ui/: badge.tsx
encrypted_match/: Anchor.toml  README.md
encrypted_match/encrypted-ixs/src/: lib.rs
encrypted_match/programs/contract/: Cargo.toml
encrypted_match/programs/contract/src/: lib.rs
encrypted_match/tests/: contract.ts
hooks/: use-contract.ts  use-dating-service.ts  use-wallet.ts
lib/: arcium-config.ts  arcium-dating-service.ts  contract.json  contract.ts  dating-events.ts  decrypt-utils.ts  mock-data.ts  profile-utils.ts  utils.ts
scripts/: init-computation-definitions.ts
