[package]
name = "contract"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
arcium-client = { default-features = false, version = "0.2.0" }
arcium-macros = "0.2.0"
arcium-anchor = "0.2.0"
